# nikke_pysum

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sum10_model.pth
core/: automation.py  cnn_recognizer.py  game_solver.py  gui.py  image_processor.py
