[project]
name = "nikke-pysum"
version = "3.1.0"
description = "Nikke游戏数字消除辅助工具，基于深度学习和优化算法"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ZyphrZero" }
]
keywords = ["nikke", "game", "automation", "deep-learning", "numba"]

dependencies = [
    # 图像处理
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",

    # 性能加速
    "llvmlite==0.46.0",
    "numba==0.63.0",

    # 深度学习
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # 自动化控制
    "pydirectinput==1.0.4",
    "keyboard>=0.13.5",

    # UI主题
    "sv-ttk==2.6.1",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
nikke-pysum = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# uv 特定配置
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.setuptools]
packages = ["core"]
